<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"


    android:background="@drawable/img"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/img_view"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="centerCrop"
        android:background="@color/cardview_dark_background"
        android:contentDescription="@string/user_image"
        android:layout_toStartOf="@+id/txt_name"
        android:layout_marginEnd="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"

        android:textColor="@color/white"
        android:layout_marginBottom="30dp"
        android:textSize="35sp"
        android:gravity="center"
        android:id="@+id/txt_name"/>

    <EditText
        android:id="@+id/edt_txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_name"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:hint="Name"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:autofillHints="name"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/edt_txt_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_txt_name"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:hint="Id"

        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold"

        android:autofillHints="emailAddress"
        android:inputType="number" />


    <EditText
        android:id="@+id/edt_txt_about"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/edt_txt_id"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:hint="About Yourself"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:inputType="textLongMessage"
        android:autofillHints="username" />


    <EditText
        android:id="@+id/edt_txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_txt_about"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:hint="Password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:autofillHints="Enter Password"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/btn_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_txt_password"

        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:hint="Image"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_img"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:hint="Register"
        android:textColorHint="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_register_nclick_here_to_login"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_below="@+id/btn_sign_in"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/txt_login"/>


</RelativeLayout>

